# MrClock

./: .gitignore  CMakeLists.txt  README.md  mrcmake.cmake  mruiconfig.cmake  vc12build.bat
ResizableLib/: config.cmake
ResizableLib/ResizableLib/: ResizableDialog.h  ResizableFormView.h  ResizableFrame.h  ResizableGrip.h  ResizableLayout.h  ResizableLibExport.h  ResizableMDIChild.h  ResizableMDIFrame.h  ResizableMinMax.h  ResizablePage.h  ResizablePageEx.h  ResizableSheet.h  ResizableSheetEx.h  ResizableSheetState.h  ResizableSplitterWnd.h  ResizableState.h  ResizableWndState.h
ResizableLib/src/: CMakeLists.txt  StdAfx.h
mrui/: DigitNumWnd.cpp  DigitNumWnd.h  IDB_DIGIT_NUM.png.h
src/: .gitignore  CMakeLists.txt  Main.rc  MainDlg.cpp  MainDlg.h  ReadMe.txt  TheApp.cpp  resource.h
